# mmhyperfit

./: .gitignore  LICENSE  README.md  README_mmfitting.md  app.ipynb  app.js  app.py  data_TP_ex4.txt  demo.ipynb  demo.py  index.html  index.ipynb  methods.py  mmhyperfit.yml  pyproject.toml  requirements.txt  rwplots.py  sample_data.txt
docs/: conf.py  index.md
mm_fitting/: methods.py
