[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mm_fitting"
version = "1.1"
description = "Methods to compute Michaelis-Menten equation parameters and statistics."
requires-python = ">=3.9"
readme = "README_mmfitting.md"
license = {text = "MIT License"}
authors = [
    {name = "António Ferreira", email = "ferreiae@gmail.com" },
]
keywords = [
    "Michaelis-Menten equation",
    "parameter estimation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.1",
]

[tool.setuptools]
packages = ["mm_fitting"]


